apps/base/kitchenowl/kitchenowl-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kitchenowl
  namespace: kitchenowl
  annotations:
    gethomepage.dev/href: "https://kitchenowl.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "KitchenOwl"
    gethomepage.dev/description: "Self-hosted groceries & recipe management"
    gethomepage.dev/app: kitchenowl
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/kitchenowl.svg"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kitchenowl.lab.mainertoo.com`)
      kind: Rule
      services:
        - name: kitchenowl
          port: 8080
  tls: {}
